# python-projects

./: .env  .env.template  README.md  config.py  download_sample_video.py  download_sample_video.sh  main.py  moviepy_config.py  pyproject.toml  requirements.txt  run.bat  run.ps1  speech_generator.py  text_generator.py  todo.md  video_editor.py  video_selector.py
